tests/error/misc_errors/unreachable_10.err
Error: Unreachable (at $FILE:8:4)
  | 
6 |     while True:
7 |         x += 1
8 |     return x
  |     ^^^^^^^^ This code is not reachable

Guppy compilation failed due to 1 previous error
